Navbar Polished Grid & Carousel Implemented

--- a/src/app/Footer/Footer.component.html
+++ b/src/app/Footer/Footer.component.html
@@ -1,4 +1,4 @@
-<footer class = "pt-2 pb-4 bg-black">
+<footer class = " pb-4 bg-black " >
     
     <div class=" list-group-item-action bg-black">
         
@@ -9,7 +9,7 @@
                 <th scope="col"> <a class = "nav-link text-light" style = "font-size: small; margin-left: 95px">Explore</a></th>
                 <th scope="col"><a class = "nav-link text-light" style = "font-size: small; margin-left: 75px;">Support</a></th>
                 <th scope="col"><a class = "nav-link text-light" style = "font-size: small; margin-left: 68px;">Company</a></th>
-                <th scope="col"><a class = "nav-link text-success " style = "font-size: large; margin-left: 180px;">For Gamers. By Gamers.™<div class ="">
+                <th scope="col"><a class = "nav-link  " style = "font-size: large; margin-left: 180px; color: limegreen;">For Gamers. By Gamers.™<div class ="">
                     <a href="#"><img src="https://www.intuswindows.com/wp-content/uploads/2016/02/Logo-Facebook-Round-1.png"  style="width:20px; margin-left: 105px;"></a>
                     <a href="#"><img src="https://www.pngkey.com/png/full/102-1025413_on-instagram-tag-us-in-your-mega-margarita.png"  style="width:20px; margin-left: 20px;"></a>
                     <a href="#"><img src="https://grenum.com/wp-content/uploads/2015/01/Twitter_logo_green.png"  style="width:20px; margin-left: 25px;"></a>
@@ -21,8 +21,8 @@
             <tbody>
               <tr>
                 
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 320px;" href="#" >RazerStores</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 95px;" href="#" >Technology</a></td>
+                <td><a class = "nav-link text-muted  " style = "font-size: small; margin-left: 320px;" href="#" >RazerStores</a></td>
+                <td><a class = "nav-link text-muted  " style = "font-size: small; margin-left: 95px;" href="#" >Technology</a></td>
                 <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 75px;" href="#" >Get Help</a></td>
                 <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 68px;" href="#" >About Us</a></td>
                 
