--- a/src/app/Header/TopHeader.component.html
+++ b/src/app/Header/TopHeader.component.html
@@ -5,16 +5,16 @@
             
             
         </a>
-        <a class = "nav-link text-muted fs-6 " href = "#">PC</a>
-        <a class = "nav-link text-muted fs-6 " href = "#">Console</a>
-        <a class = "nav-link text-muted fs-6 " href = "#" >Mobile</a>
-        <a class = "nav-link text-muted fs-6 " href = "#" >Lifestyle</a>
-        <a class = "nav-link text-muted fs-6 " href = "#" >Services</a>
-        <a class = "nav-link text-muted fs-6 " href = "#" >Community</a>
-        <a class = "nav-link text-muted fs-6 " href = "#" >Support</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#">PC</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#">Console</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#" >Mobile</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#" >Lifestyle</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#" >Services</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#" >Community</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#" >Support</a>
         
         <!--Button Search LOGO Instance-->
-        <button class="btn " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"> <img src="https://www.freeiconspng.com/uploads/search-icon-png-18.png"  style="width:20px;"></button>
+        <button class="btn hover-underline-animation" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"> <img src="https://www.freeiconspng.com/uploads/search-icon-png-18.png"  style="width:20px;"></button>
            
         <div class="offcanvas offcanvas-top bg-dark input-group " data-bs-scroll="true"  data-bs-backdrop="false" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel" style="width: 1100px; height: 60px; margin-left: 450px; margin-top: 2px; ">
            
@@ -40,7 +40,7 @@
         </div>
 
         <!--Button Cart LOGO Instance-->
-        <div class="dropdown ">
+        <div class="dropdown hover-underline-animation">
             <button class="btn  " type="button" id="ShoppingCart" data-bs-toggle="dropdown" aria-expanded="false">
                 <img src="https://images.vexels.com/media/users/3/132104/isolated/preview/5f2ebb95984bf47ea01319291eb81f68-icono-de-silueta-de-carrito-de-compras-by-vexels.png"
                 style="width:30px;">
@@ -65,16 +65,9 @@
 </h4>
 
 <h4 class = "navbar justify-content-center bg-secondary pt-5 mt-4 mb-0">
-    <div class =" text-light fade show fs-6">Intel Gamer Days: Enjoy exclusive offerings & game bundles with selected Razer Blades.</div>
-    <a class = "nav-link d text-light fade show fs-6  " href = "#" target = "_self"> Shop Now ></a>
+    
+    <div class ="text-light fade show fs-6">Exclusive Back-to-School Laptop Bundles. Get extended warranty & accessories on us.</div>
+    <a class = "nav-link text-light fs-6 hover-underline-animation" href = "#" target = "_self"> Shop Now ></a>
     
 </h4>
 
-<body class = "bg-dark ">
-   <li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li>
-   <li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li>
-   <li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li>
-   <li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li>
-   <li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li>
-   <li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li>
-   <li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li><li>a</li>
