Lab 3 - Revision of Cards/Grid additional Components: Layout/TopCards…  …/Test (for testing purposes) - Additional Data Binding and attributes added in all components besides layout (ANOTHER COMMIT DUE TO LAST NOT COMMITING EVERYTHING)

--- a/src/app/Cards/Cards.component.html
+++ b/src/app/Cards/Cards.component.html
@@ -1,291 +1,64 @@
-<body class = "bg-dark" style = "padding-bottom: 0px;" >
-   
-    
-  <a href="#"><p class="text-white" style="float: left; 
-   margin-left: 450px; 
-   margin-top: 380px; 
-   font-size: 50px;
-   font-weight: bold;
-   font-family: Arial, Helvetica, sans-serif;
+<!--Lots of CSS in here revision comiong soon-->
 
-   
-   ">
-       INTEL GAMER DAYS FESTIVAL OF DEALS
-        
-   </p>
-  </a>
 
-   <a href="#"><p class="text-white" style="
-        float: left; 
-        margin-left: 665px; 
-        margin-top: -25px; 
-        font-size: 25px;
-        font-weight: lighter;
-        font-family: Arial, Helvetica, sans-serif;
-        
-       
-        
-        ">
-           GAMES AND SAVINGS ON SELECT RAZER BLADES
-        </p>
-    </a> 
-    
-    <p class="text-white " style="
-        float: left; 
-        margin-left: 900px; 
-        margin-top: -5px; 
-        font-size: 20px;
-        font-weight: lighter;
-        font-family: Arial, Helvetica, sans-serif;
-        
-        "><a  href="#" class = "hover-underline-animation text-white ">
-          Learn More <span class = "" style="color: lime;">
-              >
-            </span>
-        </a> 
+<div class="card bg-image bg-dark border-white" style="width: 18rem; float:right; margin-right: 25px; margin-top: -125%;">
+
+  <img src="https://www.pcgamesn.com/wp-content/uploads/2020/09/razer-blade-15.jpg" class="card-img-top" alt="..."> 
+  
+  <img src="https://www.hidevolution.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/r/a/razer-blade-15-gallery12-gaming-laptop.jpg" class="card-img-top" alt="..."> 
+  
+  <div class="card-body">
+    <h5 class="card-title " style="color: limegreen;">2021 Razer Blade 15</h5>
+    <p class="card-text text-muted " style="display: inline;">
+      <li class = "navbar" >Processor: 11th Gen Intel® Core™ H Series </li>
+      <li class = "navbar" style="margin-top: -5%;">Graphics: Up to GeForce RTX™ 3080</li>
+      <li class = "navbar" style="margin-top: -5%;">Display: FHD 360Hz or 4k OLED</li>
+      <li class = "navbar" style="margin-top: -5%;">Memory: 16GB or 32GB RAM</li>
     </p>
-    
-
    
-    <a href="#"> 
-    <div class="bg-image text-white " style="
-      background-image: url('https://i.imgur.com/jbdq41Y.jpeg');
-      height: 110vh; 
-      margin: -18% 0;  
-        
+    <a href="#" class="btn btn-success btn-sm pe-5 text-white mt-2" ><img src="https://images.vexels.com/media/users/3/132104/isolated/preview/5f2ebb95984bf47ea01319291eb81f68-icono-de-silueta-de-carrito-de-compras-by-vexels.png"
+      style="width:30px;
+      margin-right: 10px;
+      
       ">
-    </div>
-   </a>
-
-   <div class="card bg-image bg-dark border-white" style="width: 18rem; float:right; margin-right: 25px; margin-top: -325px; ">
-
-    <img src="https://www.pcgamesn.com/wp-content/uploads/2020/09/razer-blade-15.jpg" class="card-img-top" alt="..."> 
     
-    <img src="https://www.hidevolution.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/r/a/razer-blade-15-gallery12-gaming-laptop.jpg" class="card-img-top" alt="..."> 
-    
-    <div class="card-body">
-      <h5 class="card-title " style="color: limegreen;">2021 Razer Blade 15</h5>
-      <p class="card-text text-muted " style="display: inline;">
-        <li class = "navbar" >Processor: 11th Gen Intel® Core™ H Series </li>
-        <li class = "navbar" style="margin-top: -5%;">Graphics: Up to GeForce RTX™ 3080</li>
-        <li class = "navbar" style="margin-top: -5%;">Display: FHD 360Hz or 4k OLED</li>
-        <li class = "navbar" style="margin-top: -5%;">Memory: 16GB or 32GB RAM</li>
-      </p>
-     
-      <a href="#" class="btn btn-success btn-sm pe-5 text-white mt-2" ><img src="https://images.vexels.com/media/users/3/132104/isolated/preview/5f2ebb95984bf47ea01319291eb81f68-icono-de-silueta-de-carrito-de-compras-by-vexels.png"
-        style="width:30px;
-        margin-right: 10px;
-        
-        ">
-        Add To Cart
-        </a>
+    {{Add}}
+      
+    </a>
 
-    </div>
   </div>
-
-  
-
-
-
-<a href="#"> 
-  <div class="bg-image text-white " style="
-  
-    background-image: url('https://www.savingcontent.com/wp-content/uploads/2021/09/razer-iskur-fabric-desktop-hero.jpg');
-    height: 84vh; 
-    margin-top: 358px;  
-    background-repeat: no-repeat;
-    
-    
-    ">
-  </div>
-</a>
-
-
- <a href="#"><p class="text-white " style="
-  float: left;
-  margin-left: 600px;
-  margin-right: -20%; 
-  margin-top: -40%; 
-  font-size: 50px;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
-  text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 2px 0 #000,
-    1px 1px 0 #000;
-	
- 
-  
-  ">
-      RAZER ISKUR GAMING CHAIR
-       
-  </p>
- </a>
- 
- <a href="#"><p class="text-white" style="
-  float: left; 
-  margin-left: 810px; 
-  margin-top: -36.5%; 
-  font-size: 25px;
-  font-weight: lighter;
-  font-family: Arial, Helvetica, sans-serif;
-  text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 2px 0 #000,
-    1px 1px 0 #000;
-  
-  ">
-     AVAILABLE IN FABRIC & XL
-  </p>
-</a> 
-
-<p class="text-white" style="
-  float: left; 
-  margin-left: 870px; 
-  margin-top: -34%; 
-  font-size: 20px;
-  font-weight: lighter;
-  font-family: Arial, Helvetica, sans-serif;
-  text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 2px 0 #000,
-    1px 1px 0 #000;
-    
-  ">
-  <a  href="#" class = "hover-underline-animation text-white " style="">
-    Learn More <span class = "" style="color: lime; ">
-        >
-      </span>
-  </a> 
-
-  <a  href="#" class = "hover-underline-animation text-white  " style="
-  
-  text-shadow: 5px -1px 0 rgb(70, 69, 69);
-  margin-left: 25px;
-  text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 2px 0 #000,
-    1px 1px 0 #000;
-  ">
-    Buy <span class = "" style="color: lime;">
-        >
-      </span>
-  </a> 
-</p>
+</div>
 
 <div class="card bg-image bg-dark border-white" style="
 width: 18rem; 
 float:right; 
-margin-right: 25px; 
-margin-top: -770px; ">
+margin-right: 25px;
+margin-top: -82%;">
 
   <img src="https://phonemantra.com/wp-content/uploads/2020/10/chair1-518x420.jpg" class="card-img-top" alt="..."> 
   
   <img src="https://gamezigo.com/wp-content/uploads/2021/03/1614914079_275_Razer-Iskur-Gaming-Chair-Now-Comes-In-Sleek-All-Black-Design.jpg" class="card-img-top" alt="..."> 
   
   <div class="card-body">
-    <h5 class="card-title " style="color: limegreen;">2021 ISKUR GAMING CHAIR</h5>
+    <h5 class="card-title " style="color: limegreen;">
+      
+      {{RIG}}
+   
+    </h5>
     <h5 class="card-title" style= "color: green; font-size: 15px;">ALL IN ON ERGONOMICS</h5>
-    <p class="card-text text-muted">To help you achieve perfect gaming form in front of your computer, the Razer Iskur range focuses on giving you full-range 
-      support that maintains your posture and minimizes muscle fatigue.</p>
+    <p class="card-text text-muted">
+     
+      {{D2}}
+    
+    </p>
    
     <a href="#" class="btn btn-success btn-sm pe-5 text-white" ><img src="https://images.vexels.com/media/users/3/132104/isolated/preview/5f2ebb95984bf47ea01319291eb81f68-icono-de-silueta-de-carrito-de-compras-by-vexels.png"
       style="width:30px;
       margin-right: 10px;
       
       ">
-      Add To Cart
+      {{Add}}
       </a>
 
   </div>
 </div>
-
-
-
-
-<a href="#"> 
-  <div class="bg-image text-white " style="
-  
-    background-image: url('https://i.imgur.com/PutKhkS.jpg');
-    
-    width: 1902px; 
-    height: 80vh;
-    margin-top: 10px; 
-    padding-bottom: 780px;
-
-
-    background-repeat: no-repeat;
-    background-size: 1920px;
-   
-
-    ">
-  </div>
-</a>
-
-<a href="#"><p class="text-white " style="
-  float: left;
-  margin-left: 725px;
-  margin-right: -20%; 
-  margin-top: -40%; 
-  font-size: 50px;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
-  text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 2px 0 #000,
-    1px 1px 0 #000;
-	
- 
-  
-  ">
-     RAZERSTORE LIVE
-       
-  </p>
- </a>
- 
- <a href="#"><p class="text-white" style="
-  float: left; 
-  margin-left: 650px; 
-  margin-top: -36.5%; 
-  font-size: 25px;
-  font-weight: lighter;
-  font-family: Arial, Helvetica, sans-serif;
-  text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 2px 0 #000,
-    1px 1px 0 #000;
-  
-  ">
-     WIN THE GRAND RAFFLE & EXCLUSIVE PRODUCTS
-  </p>
-</a> 
-
-<p class="text-white" style="
-  float: left; 
-  margin-left: 900px; 
-  margin-top: -34%; 
-  font-size: 20px;
-  font-weight: lighter;
-  font-family: Arial, Helvetica, sans-serif;
-  text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 2px 0 #000,
-    1px 1px 0 #000;
-    
-  ">
-  <a  href="#" class = "hover-underline-animation text-white " style="">
-    Sign up Now <span class = "" style="color: lime; ">
-        >
-      </span>
-  </a> 
-  
-  
-
-</body>
