--- a/src/app/Footer/Footer.component.html
+++ b/src/app/Footer/Footer.component.html
@@ -21,10 +21,10 @@
             <tbody>
               <tr>
                 
-                <td><a class = "nav-link text-muted  " style = "font-size: small; margin-left: 320px;" href="#" >RazerStores</a></td>
-                <td><a class = "nav-link text-muted  " style = "font-size: small; margin-left: 95px;" href="#" >Technology</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 75px;" href="#" >Get Help</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 68px;" href="#" >About Us</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 320px;" href="#" >RazerStores</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white  " style = "font-size: small; margin-left: 95px;" href="#" >Technology</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 75px;" href="#" >Get Help</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 68px;" href="#" >About Us</a></td>
                 
                 
                 
@@ -32,48 +32,48 @@
               </tr>
               <tr>
                 
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 320px;" href="#" >Store Locator</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 95px;" href="#" >Chroma RGB</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 75px;" href="#" >Registration & Warranty</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 68px;" href="#" >Careers</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 320px;" href="#" >Store Locator</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 95px;" href="#" >Chroma RGB</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 75px;" href="#" >Registration & Warranty</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 68px;" href="#" >Careers</a></td>
               
             </tr>
               <tr>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 320px;" href="#" >Purchase Programs</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 95px;" href="#" >Concepts</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 75px;" href="#" >Online Store</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 68px;" href="#" >Press Room</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 320px;" href="#" >Purchase Programs</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 95px;" href="#" >Concepts</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 75px;" href="#" >Online Store</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 68px;" href="#" >Press Room</a></td>
               
               </tr>
               
               <tr>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 320px;" href="#" >Exclusives</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 95px;" href="#" >Esports</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 75px;" href="#" >RazerCare</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 68px;" href="#" >Investor Relations</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 320px;" href="#" >Exclusives</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 95px;" href="#" >Esports</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 75px;" href="#" >RazerCare</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 68px;" href="#" >Investor Relations</a></td>
               
               </tr>
 
               <tr>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 320px;" href="#" >Purchase Programs</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 95px;" href="#" >Concepts</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 75px;" href="#" >Online Store</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 68px;" href="#" >Press Room</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 320px;" href="#" >Purchase Programs</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 95px;" href="#" >Concepts</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 75px;" href="#" >Online Store</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 68px;" href="#" >Press Room</a></td>
               
               </tr>
                <tr>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 320px;" href="#" >Last Chance</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 95px;" href="#" >Collabs</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 75px;" href="#" >Manager Razer ID</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 68px;" href="#" >zVentures</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 320px;" href="#" >Last Chance</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 95px;" href="#" >Collabs</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 75px;" href="#" >Manager Razer ID</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 68px;" href="#" >zVentures</a></td>
               
               </tr>
 
               <tr>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 320px;" href="#" >Newsletter</a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 95px;" href="#" ></a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 75px;" href="#" ></a></td>
-                <td><a class = "nav-link text-muted" style = "font-size: small; margin-left: 68px;" href="#" >Concepts</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 320px;" href="#" >Newsletter</a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 95px;" href="#" ></a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 75px;" href="#" ></a></td>
+                <td><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: small; margin-left: 68px;" href="#" >Concepts</a></td>
                 
               
               </tr>
@@ -91,15 +91,15 @@
             <thead>
               <tr>
                 <th scope="col" class =""><a class = "nav-link text-muted" style = "font-size: small; margin-left: 320px;">Copyright © 2021 Razer Inc. All rights reserved.</a></th>
-                <th scope="col"> <a class = "nav-link text-muted" style = "font-size: smaller; margin-left: 10px" href="#">Site Map</a></th>
-                <th scope="col"> <a class = "nav-link text-muted" style = "font-size: smaller;">|</a></th>
-                <th scope="col"><a class = "nav-link text-muted" style = "font-size: smaller;" href="#">Legal Terms</a></th>
-                <th scope="col"> <a class = "nav-link text-muted" style = "font-size: smaller;">|</a></th>
-                <th scope="col"><a class = "nav-link text-muted" style = "font-size: smaller;" href="#">Privacy Policy</a></th>
-                <th scope="col"> <a class = "nav-link text-muted" style = "font-size: smaller;">|</a></th>
-                <th scope="col"><a class = "nav-link text-muted " style = "font-size: smaller;" href="#">Cookie Policy</a></th>
-                <th scope="col"> <a class = "nav-link text-light" style = "font-size: smaller; margin-left: 62px" >United States |</a></th>
-                <th scope="col"> <a class = "nav-link text-muted" style = "font-size: smaller; margin-left: 0px" href="#">Change Location ></a></th>
+                <th scope="col"> <a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: smaller; margin-left: 10px" href="#">Site Map</a></th>
+                <th scope="col"> <a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: smaller;">|</a></th>
+                <th scope="col"><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: smaller;" href="#">Legal Terms</a></th>
+                <th scope="col"> <a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: smaller;">|</a></th>
+                <th scope="col"><a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: smaller;" href="#">Privacy Policy</a></th>
+                <th scope="col"> <a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: smaller;">|</a></th>
+                <th scope="col"><a class = "nav-link hover-underline-animation hover-text-white " style = "font-size: smaller;" href="#">Cookie Policy</a></th>
+                <th scope="col"> <a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: smaller; margin-left: 62px" >United States |</a></th>
+                <th scope="col"> <a class = "nav-link hover-underline-animation hover-text-white" style = "font-size: smaller; margin-left: 0px" href="#">Change Location ></a></th>
               </tr>
             </thead>
             </table>
