--- a/src/app/Header/TopHeader.component.html
+++ b/src/app/Header/TopHeader.component.html
@@ -1,4 +1,4 @@
-<h4 class = "navbar bg-black justify-content-center gap-5 fixed-top p-1  ">
+<h4 class = "navbar bg-black justify-content-center gap-5 fixed-top p-1" style = "border-bottom: lawngreen solid 2px;">
     
         <a class = "nav-link d text-light fade show " href = "#">
             <img src="https://hybrismedianonprods1.blob.core.windows.net/sys-master-phoenix-images-container/h6c/h6b/9559620911134/razer-ths-logo.svg"  style="width:40px;">
@@ -64,7 +64,7 @@
         
 </h4>
 
-<h4 class = "navbar justify-content-center bg-secondary pt-5 mt-4 mb-0">
+<h4 class = "navbar justify-content-center pt-5 mt-4 mb-0" style = "background-color: rgba(100, 99, 99, 0.815);">
     
     <div class ="text-light fade show fs-6">Exclusive Back-to-School Laptop Bundles. Get extended warranty & accessories on us.</div>
     <a class = "nav-link text-light fs-6 hover-underline-animation" href = "#" target = "_self"> Shop Now ></a>
