--- a/src/app/Test/Test.component.css
+++ b/src/app/Test/Test.component.css
@@ -1,3 +1,13 @@
+div a p{
+    float: left;
+    margin-top: 1%;
+    font-size: 50px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 425px;
+
+}
+
 .hover-underline-animation {
     display: inline-block;
     position: relative;
@@ -31,24 +41,4 @@
   .hover-text-white:hover{  
     color:white;
   
-  }
-  
-  div{
-    background-image: url('https://i.imgur.com/EpTWlbl.jpg');
-    
-    margin-right: 1%;
-    
-    
-    width: 950px; 
-    height: 60vh;
-   
-   
-    background-repeat: no-repeat;
-    background-size: 945px 570px;
-
-  }
-  
-  div p{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 45px;  font-weight:650;
   }
