Lab 4 - Routing and More Layout Components Implemented

--- a/src/app/Layout/Layout.component.html
+++ b/src/app/Layout/Layout.component.html
@@ -1,5 +1,7 @@
 
 
+<NotificationNavBar>Loading</NotificationNavBar>
+
 
 <div class = ""><!--dec-->
     <div class = "d-flex flex-column bd-higlight bg-dark"><!--row-->
@@ -51,7 +53,4 @@
 
         </div>
     </div><!--end row-->
-
-
-
 </div>
