--- a/src/app/Header/TopHeader.component.html
+++ b/src/app/Header/TopHeader.component.html
@@ -1,17 +1,17 @@
 <h4 class = "navbar bg-black justify-content-center gap-5 fixed-top p-1" style = "border-bottom: lawngreen solid 2px;">
     
-        <a class = "nav-link d text-light fade show " href = "#">
+        <a class = "nav-link d text-light fade show " routerLink = "./Layout">
             <img src="https://hybrismedianonprods1.blob.core.windows.net/sys-master-phoenix-images-container/h6c/h6b/9559620911134/razer-ths-logo.svg"  style="width:40px;">
             
             
         </a>
-        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#">PC</a>
-        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#">Console</a>
-        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#" >Mobile</a>
-        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#" >Lifestyle</a>
-        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#" >Services</a>
-        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#" >Community</a>
-        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" href = "#" >Support</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" routerLink = "./PC">PC</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" routerLink = "./console">Console</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" routerLink = "./mobile" >Mobile</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" routerLink = "./Lifestyle" >Lifestyle</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" routerLink = "./Services" >Services</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" routerLink = "./Community" >Community</a>
+        <a class = "nav-link  fs-6 hover-underline-animation hover-text-white" routerLink = "./Support" >Support</a>
         
         <!--Button Search LOGO Instance-->
         <button class="btn hover-underline-animation" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"> <img src="https://www.freeiconspng.com/uploads/search-icon-png-18.png"  style="width:20px;"></button>
@@ -64,10 +64,5 @@
         
 </h4>
 
-<h4 class = "navbar justify-content-center pt-5 mt-4 mb-0" style = "background-color: rgba(100, 99, 99, 0.815);">
-    
-    <div class ="text-light fade show fs-6">Exclusive Back-to-School Laptop Bundles. Get extended warranty & accessories on us.</div>
-    <a class = "nav-link text-light fs-6 hover-underline-animation" href = "#" target = "_self"> Shop Now ></a>
-    
-</h4>
+
 
