--- a/src/app/TopCards/TopCards.component.html
+++ b/src/app/TopCards/TopCards.component.html
@@ -1,23 +1,25 @@
 
 
 <div
-class="bg-image"
-style="
-  background-image: url('https://i.imgur.com/FsjcxbR.jpg');
-  height: 85vh;
-  background-repeat: no-repeat;
+class="bg-image mb-2"
+style=" height: 80vh;
+    background-image: url('{{imagePath}}');
+    background-repeat:no-repeat;
+    
 "
+    
+
 >
     
     
       <div class = "text-center background-image"> 
         
-                <a href = "#"><p class=" text-white above mt-5">
-                    {{Intel}}
+                <a href = "#"><p class="text-white above mt-5">
+                    {{title}}
                 </p></a>
                  <p>
                 <a href="#"><p class="text-white above" style="font-size: 25px; font-weight: lighter;">
-                    GAMES AND SAVINGS ON SELECT RAZER BLADES
+                    {{description}}
                 </p>
                  </a> 
                 </p>
@@ -28,9 +30,5 @@ style="
                         </span>
                     </a> 
                 </p>
-                
         </div> 
-        
-    
-
 </div>
