--- a/src/app/Layout/Layout.component.html
+++ b/src/app/Layout/Layout.component.html
@@ -6,15 +6,11 @@
 <div class = ""><!--dec-->
     <div class = "d-flex flex-column bd-higlight bg-dark"><!--row-->
         <div class = "flex-row "><!--col-->
-            <TopCards>Loading</TopCards>
-            
+            <div *ngFor= "let TopCard of topcards;">
+            <TopCards title = {{TopCard.title}} description = {{TopCard.description}} imagePath = {{TopCard.imagePath}}>Loading</TopCards>
+            </div>
         </div><!--end row-->
-        <div class = "flex-row mt-2">
-            <TopCards>Loading</TopCards>    
-        </div>
-        <div class = "flex-row mt-2">
-            <TopCards>Loading</TopCards>  
-        </div>
+       
     </div><!--end col-->
 </div>
 
