--- a/src/app/Grid/Grid.component.css
+++ b/src/app/Grid/Grid.component.css
@@ -36,7 +36,7 @@
   div{
     background-image: url('https://i.imgur.com/EpTWlbl.jpg');
     
-    margin-right: 1%;
+    margin-right: 0;
     
     
     width: 950px; 
@@ -44,7 +44,7 @@
    
    
     background-repeat: no-repeat;
-    background-size: 945px 570px;
+    background-size: 980px 570px;
 
   }
   
