--- a/src/app/Layouts/Lifestyle/Lifestyle.component.html
+++ b/src/app/Layouts/Lifestyle/Lifestyle.component.html
@@ -4,8 +4,8 @@
     <div class = ""><!--dec-->
         <div class = "d-flex flex-column bd-higlight bg-dark"><!--row-->
             <div class = "flex-row "><!--col-->
-                <div *ngFor= "let TopCard of topcards;">
-                    <TopCards title = {{TopCard.title}} description = {{TopCard.description}} imagePath = {{TopCard.imagePath}} description2 = "2">Loading</TopCards>
+                <div *ngFor= "let cardx of myCards;">
+                    <TopCards title = {{cardx.title}} description = {{cardx.description}} imagePath = {{cardx.imagePath}} description2 = "">Loading</TopCards>
                     </div>
                 
             </div><!--end row-->
