--- a/src/app/TopCards/TopCards.component.html
+++ b/src/app/TopCards/TopCards.component.html
@@ -5,6 +5,7 @@ class="bg-image mb-2"
 style=" height: 80vh;
     background-image: url('{{imagePath}}');
     background-repeat:no-repeat;
+    background-size: cover;
     
 "
     
