Lab 8 - Input / Forms

--- a/src/app/Cards/Cards.component.html
+++ b/src/app/Cards/Cards.component.html
@@ -1,7 +1,7 @@
 <!--Lots of CSS in here revision comiong soon-->
 
 
-<div class="card bg-image bg-dark border-white" style="width: 18rem; float:right; margin-right: 25px; margin-top: -125%;">
+<div class="card bg-image bg-dark border-white" style="width: 18rem; float:right; margin-right: 25px; margin-top: -119%;">
 
   <img src="https://www.pcgamesn.com/wp-content/uploads/2020/09/razer-blade-15.jpg" class="card-img-top" alt="..."> 
   
@@ -31,9 +31,10 @@
 
 <div class="card bg-image bg-dark border-white" style="
 width: 18rem; 
-float:right; 
+float: right; 
 margin-right: 25px;
-margin-top: -83%;">
+margin-top:   -79%;
+">
 
   <img src="https://phonemantra.com/wp-content/uploads/2020/10/chair1-518x420.jpg" class="card-img-top" alt="..."> 
   
