--- a/src/app/Forums/LoginForm.component.css
+++ b/src/app/Forums/LoginForm.component.css
@@ -6,14 +6,14 @@
   .hover-underline-animation:after {
     content: '';
     position: absolute;
-    margin-left: 0;
+    margin-left: 5px;
     
-    width: 80%;
+    width: 75%;
     transform: scaleX(0);
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: white;
+    background-color: lawngreen;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
   }
@@ -31,5 +31,3 @@
     color:white;
   
   }
-  
-  
