--- a/src/app/NotificationNavBar/NotificationNavBar.component.html
+++ b/src/app/NotificationNavBar/NotificationNavBar.component.html
@@ -5,3 +5,4 @@
     <a class = "nav-link text-light fs-6 hover-underline-animation" href = "#" target = "_self"> Shop Now ></a>
     
 </h4>
+<LoginForm></LoginForm>
